[gd_scene load_steps=3 format=3 uid="uid://pl8pmxhbopm6"]

[ext_resource type="Texture2D" uid="uid://5fk6o4waupvj" path="res://assets/sprites/minigames/simon_says/gui/circle.png" id="1_nttxy"]
[ext_resource type="Script" path="res://src/minigames/simon_says/rounds_counter/round_status.gd" id="2_xsngr"]

[node name="RoundStatus" type="TextureRect"]
z_index = 1
texture = ExtResource("1_nttxy")
script = ExtResource("2_xsngr")

[node name="ColorRect" type="ColorRect" parent="."]
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -26.0
offset_right = 15.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.419813, 0.419813, 0.419813, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -20.0
offset_right = 24.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.419813, 0.419813, 0.419813, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -20.0
offset_right = 26.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.419813, 0.419813, 0.419813, 1)
